# b58uuid-py

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  index.py  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: publish.yml  test.yml
b58uuid/: __init__.py  base58.py
tests/: test_b58uuid.py  test_canonical_vectors.py  test_edge_cases.py
