[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b58uuid"
version = "1.0.0"
description = "High-performance Base58-encoded UUID library for Python"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "b58uuid contributors", email = "contact@b58uuid.io"}]
maintainers = [{name = "b58uuid contributors", email = "contact@b58uuid.io"}]
keywords = ["uuid", "base58", "short-uuid", "encoding", "base58-uuid", "url-safe"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://b58uuid.io"
Documentation = "https://github.com/b58uuid/b58uuid-py#readme"
Repository = "https://github.com/b58uuid/b58uuid-py"
Issues = "https://github.com/b58uuid/b58uuid-py/issues"
Changelog = "https://github.com/b58uuid/b58uuid-py/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["b58uuid"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
